feat:learn react 1

--- a/web/demo/html/home/left.html
+++ b/web/demo/html/home/left.html
@@ -33,6 +33,13 @@
                 </ul>
             </dd>
             <dd>
+                <p>JS框架</p>
+                <ul>
+                    <li><a href="../react-learn/index.html" target="blank">React</a></li>
+                    <li><a href="../css-learn/css-container-learn.html" target="main">Vue</a></li>
+                </ul>
+            </dd>
+            <dd>
                 <p>CSS 学习</p>
                 <ul>
                     <li><a href="../css-learn/css-container-learn.html" target="main">Css 容器</a></li>
