feat: learn react 2

--- a/web/demo/html/react-learn/index.html
+++ b/web/demo/html/react-learn/index.html
@@ -19,12 +19,11 @@
         <li><a href="this-props-children.html">this.props.children</a></li>
         <li><a href="prop-types.html">PropTypes</a></li>
         <li><a href="finding-dom-node.html">Finding a DOM node</a></li>
-        <li>以下待整理</li>
-        <li><a href="render-jsx.html">this.state</a></li>
-        <li><a href="render-jsx.html">Form</a></li>
-        <li><a href="render-jsx.html">Component Lifecycle</a></li>
-        <li><a href="render-jsx.html">Ajax</a></li>
-        <li><a href="render-jsx.html">Display value from a Promise</a></li>
+        <li><a href="this-state.html">this.state</a></li>
+        <li><a href="form.html">Form</a></li>
+        <li><a href="component-lifecycle.html">Component Lifecycle</a></li>
+        <li><a href="ajax.html">Ajax</a></li>
+        <li><a href="display-value-from-promise.html">Display value from a Promise</a></li>
         <li><a href="render-jsx.html">Server-side rendering</a></li>
     </ol>
     <script type="text/babel">
